2005-05-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Check for stlp_std (stlport) namespace, let it override std
 win32/INSTALL.txt:
  - Greatly simplified MSYS build--thanks Michael J. Pedersen!
2005-05-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems:
  - New item PQXX_HAVE_C_NAN for C-language NAN macro
 configure.ac.in:
  - Added some escaping to configuration header generation code
  - Add check for NAN macro
 config/sample-headers/compiler/MinGW-3.4/config-internal-compiler.h,
 config/sample-headers/compiler/gcc-3.4/config-internal-compiler.h,
 config/sample-headers/compiler/gcc-3.3-apple/config-internal-compiler.h:
  - Added PQXX_HAVE_QUIET_NAN
 include/pqxx/isolation.hxx:
  - Removed export directive from enum; confused Doxygen, probably not needed
 include/pqxx/util.hxx:
  - Fixed PQAlloc::freemem() specializations, thanks Rupert Kittinger!
  - Should fix memory leak
  - Documented fact that libpq headers no longer needed to compile clients
 src/connection_base.cxx:
  - Made pqxxNoticeCaller static so maybe it won't get external linkage
 src/util.cxx, test/test000.cxx:
  - Use NAN macro if available
  - No longer use tolower() in NaN string recognition--locale-dependent!
  - Special-case NaN output
2005-05-05  J.H.M. Dassen (Ray) <jdassen@debian.org>
 configure.ac.in:
  - Check for availability of "dot".
 doc/Doxyfile.in:
  - Use HAVE_DOT value determined at configure time.
2005-05-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Result for libpq check was inverted; was masked by code typo!
  - Oid check was also inverted, masked by gcc bug--thanks Kathy
2005-05-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
  - Cleaned up Windows documentation somewhat
2005-04-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Made inclusion of sys/select.h in tests conditional on config macro
  - Made inclusion of unistd.h in tests conditional on config macro
  - Included <ctime> rather than <time.h> in tests